# ipb-python-wrapper

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
src/: EXAMPLE_credentials  authorization_bearer.py  client.py  ipb_client.py  openapi_client.py  personal_banking_client.py  test_client.py
